backend/cloud/k8s/gateway-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deploy
spec:
  selector:
    matchLabels:
      app: gateway-service
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: gaeun0811/gateway-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1000Mi
          volumeMounts:
            - name: logs
              mountPath: /logs
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: gateway-logs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: ClusterIP
  selector:
    app: gateway-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
